fix: popup needs a z-index on wiki.gg

--- a/modules/dropdownSwitcher/styles-wikigg.less
+++ b/modules/dropdownSwitcher/styles-wikigg.less
@@ -71,6 +71,7 @@ body #p-personal #pt-themes .ext-themetoggle-popup {
     font-size: 102%;
     box-sizing: border-box;
     padding-top: 0.6rem;
+    z-index: 2;
 
     @media screen and (max-width: 720px) {
         font-size: inherit;
